[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_scientist"
version = "0.1.0"
authors = [
    { name="SakanaAI", email="info@sakana.ai" },
]
description = "AI Scientist - Multi-agent AI authoring framework"
readme = "README.md"
requires-python = ">=3.8,<3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/SakanaAI/AI-Scientist"
"Bug Tracker" = "https://github.com/SakanaAI/AI-Scientist/issues"
